--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -1,6 +1,7 @@
 defaults: &defaults
   ui_endpoint: http://localhost:3000
   ui_endpoint_domain: localhost:3000
+  api_domain: http://localhost:4000
 
 development:
   <<: *defaults
