--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -1,6 +1,7 @@
 defaults: &defaults
   ui_endpoint: http://localhost:3000
   api_endpoint: http://localhost:4000
+  profinda_api_endpoint: http://apistaging.profinda.com/api
 
 development:
   <<: *defaults
