--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -2,6 +2,8 @@ defaults: &defaults
   ui_endpoint: http://localhost:3000
   api_endpoint: http://localhost:4000
   profinda_api_endpoint: http://apistaging.profinda.com/api
+  profinda_account_domain: cooltribes-staging.profinda.com
+
 
 development:
   <<: *defaults
