--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -3,7 +3,7 @@ defaults: &defaults
   api_endpoint: http://localhost:4000
   profinda_api_endpoint: http://apistaging.profinda.com/api
   profinda_account_domain: cooltribes-staging.profinda.com
-
+  sidekiq_password: secret
 
 development:
   <<: *defaults
