Added new entry in application.yml to set the fog directory.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -6,6 +6,7 @@ defaults: &defaults
   sidekiq_password: secret
   receptive_vendor_id: xxxxxxx
   receptive_secret_key: xxxxxxx
+  fog_directory: xxxxxxxxxx
 
 development:
   <<: *defaults
