Added new methods to join a user to initial groups. Added new key in application.yml to set the initial groups.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -7,6 +7,7 @@ defaults: &defaults
   receptive_vendor_id: xxxxxxx
   receptive_secret_key: xxxxxxx
   fog_directory: xxxxxxxxxx
+  initial_groups: []
 
 development:
   <<: *defaults
