ruta de elasticsearch para stage

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -22,6 +22,7 @@ test:
 staging:
   <<: *defaults
   mailchimp_general_list_id: '52c8e138cb'
+  elasticsearch_url: http://search-elasticsearch-alumnet-crdxhp32vkdizx3ozybbk6irxu.us-west-2.es.amazonaws.com/  
 
 production:
   <<: *defaults
