--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -43,7 +43,7 @@ test:
 
 staging:
   <<: *default_settings
-  app_name: My Application (Staging)
+  app_name: AlumNet (Staging)
 
 production:
   <<: *default_settings
