--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -19,6 +19,7 @@ defaults: &defaults
   profinda_account:
     user: xxxxxxxxxxxxxxx
     password: xxxxxxxxxxx
+  mailchimp_general_api_key: 'f0ad0e019703b02132b2cf15ad458e50-us10'
 
 development:
   <<: *defaults
@@ -34,3 +35,4 @@ staging:
 
 production:
   <<: *defaults
+  mailchimp_general_api_key: '01053b731cd9246d18f459085ea9cb2f-us5'
