--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -20,6 +20,8 @@ defaults: &defaults
     user: xxxxxxxxxxxxxxx
     password: xxxxxxxxxxx
   mailchimp_general_api_key: 'f0ad0e019703b02132b2cf15ad458e50-us10'
+  mandrill_subaccount: 'alumnet_develop'
+  mandrill_api_key: '_6giUhWWZOU6r2YgCmuf-Q'
 
 development:
   <<: *defaults
@@ -32,8 +34,10 @@ test:
 staging:
   <<: *defaults
   mailchimp_general_list_id: 'staging'
+  mandrill_subaccount: 'alumnet_staging'
 
 production:
   <<: *defaults
   mailchimp_general_api_key: '01053b731cd9246d18f459085ea9cb2f-us5'
   mailchimp_general_list_id: 'e958827e05'
+  mandrill_subaccount: 'alumnet_production'
